[package]
name = "meowpdf"
edition = "2021"
version = "0.1.0"

[dependencies]
base64 = "0.22.1"
dirs = "5.0.1"
mupdf = { default-features = false, version = "0.5" }
notify = { version = "6.1.1" }
serde = { version = "1.0.219", features = ["derive"] }
toml = { features = ["parse"], default-features = false, version = "0.8.22" }
crossterm = { version = "0.29", features = ["serde"] }
keybinds = { version = "0.2", features = ["crossterm", "serde"] }
open = "5.3.2"

[dependencies.crossbeam-channel]
version = "0.5.15"
features = []
default-features = false

[dependencies.textwrap]
version = "0.16.1"
features = []
default-features = false

[patch.crates-io]
crossterm = { git = "https://github.com/monoamine11231/crossterm-apc.git" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
